{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 74,
  "lineage": "2e6d35d2-8242-4b1c-0e04-c794ed7b6f79",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jumpsrv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:945251900491:security-group/sg-0f042a9b6f495049f",
            "description": "Allow all inbound traffic for DevOps team",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f042a9b6f495049f",
            "ingress": [
              {
                "cidr_blocks": [
                  "49.37.221.208/32"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "jumpsrv",
            "name_prefix": "",
            "owner_id": "945251900491",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-000ba1ce5953f5ee0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03ae1f4e6393e3d13",
            "arn": "arn:aws:ec2:ap-southeast-1:945251900491:instance/i-09d9a81e94aa600c3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09d9a81e94aa600c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops-team",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0a6ed7a47f1820a52",
            "private_dns": "ip-172-168-13-101.ap-southeast-1.compute.internal",
            "private_ip": "172.168.13.101",
            "public_ip": "18.141.185.114",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:945251900491:key/0d9b0cda-46e5-4525-86d3-7f2763ac1721",
                "throughput": 0,
                "volume_id": "vol-08b90aa5e998937e3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-097d28122a407ab4f",
            "tags": {
              "Environment": "dev",
              "Name": "jenkins-jump",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jenkins-jump",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "jenkins-jump"
            },
            "vpc_security_group_ids": [
              "sg-0f042a9b6f495049f"
            ]
          },
          "dependencies": [
            "aws_ami_copy.ubuntu",
            "aws_key_pair.devops",
            "aws_security_group.jumpsrv",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_endpoint.apigw",
            "module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.vpc.aws_vpc_endpoint.appstream",
            "module.vpc.aws_vpc_endpoint.athena",
            "module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.vpc.aws_vpc_endpoint.cloudformation",
            "module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.vpc.aws_vpc_endpoint.codebuild",
            "module.vpc.aws_vpc_endpoint.codecommit",
            "module.vpc.aws_vpc_endpoint.codepipeline",
            "module.vpc.aws_vpc_endpoint.config",
            "module.vpc.aws_vpc_endpoint.dynamodb",
            "module.vpc.aws_vpc_endpoint.ec2",
            "module.vpc.aws_vpc_endpoint.ec2messages",
            "module.vpc.aws_vpc_endpoint.ecr_api",
            "module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.vpc.aws_vpc_endpoint.ecs",
            "module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.vpc.aws_vpc_endpoint.efs",
            "module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.vpc.aws_vpc_endpoint.events",
            "module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.vpc.aws_vpc_endpoint.glue",
            "module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.vpc.aws_vpc_endpoint.kms",
            "module.vpc.aws_vpc_endpoint.logs",
            "module.vpc.aws_vpc_endpoint.monitoring",
            "module.vpc.aws_vpc_endpoint.rekognition",
            "module.vpc.aws_vpc_endpoint.s3",
            "module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.vpc.aws_vpc_endpoint.sns",
            "module.vpc.aws_vpc_endpoint.sqs",
            "module.vpc.aws_vpc_endpoint.ssm",
            "module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.vpc.aws_vpc_endpoint.storagegateway",
            "module.vpc.aws_vpc_endpoint.sts",
            "module.vpc.aws_vpc_endpoint.transfer",
            "module.vpc.aws_vpc_endpoint.transferserver",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.vpc.data.aws_vpc_endpoint_service.appstream",
            "module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.vpc.data.aws_vpc_endpoint_service.config",
            "module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.vpc.data.aws_vpc_endpoint_service.events",
            "module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.vpc.data.aws_vpc_endpoint_service.transferserver"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f971f464cdca4ac9",
            "association_id": "eipassoc-05d245f19381b610a",
            "domain": "vpc",
            "id": "eipalloc-0f971f464cdca4ac9",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-08f6e7a1c1f92ad5e",
            "private_dns": "ip-172-168-12-92.ap-southeast-1.compute.internal",
            "private_ip": "172.168.12.92",
            "public_dns": "ec2-54-169-68-41.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.169.68.41",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-ap-southeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-vpc-ap-southeast-1a",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aae6f1e5b1a48e13",
            "association_id": "eipassoc-0cd9eb02d7d1e0474",
            "domain": "vpc",
            "id": "eipalloc-0aae6f1e5b1a48e13",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-01dd17b5d96426f58",
            "private_dns": "ip-172-168-17-224.ap-southeast-1.compute.internal",
            "private_ip": "172.168.17.224",
            "public_dns": "ec2-18-138-7-66.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.138.7.66",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-ap-southeast-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-vpc-ap-southeast-1b",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e810c3db35edf36",
            "association_id": "eipassoc-0f6715f48bc101ee0",
            "domain": "vpc",
            "id": "eipalloc-01e810c3db35edf36",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-087ebf3ceff86f9f2",
            "private_dns": "ip-172-168-22-236.ap-southeast-1.compute.internal",
            "private_ip": "172.168.22.236",
            "public_dns": "ec2-175-41-130-121.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "175.41.130.121",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-ap-southeast-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-vpc-ap-southeast-1c",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:945251900491:internet-gateway/igw-0cd43e73142a73b50",
            "id": "igw-0cd43e73142a73b50",
            "owner_id": "945251900491",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-000ba1ce5953f5ee0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f971f464cdca4ac9",
            "connectivity_type": "public",
            "id": "nat-0b88e0128358d236e",
            "network_interface_id": "eni-08f6e7a1c1f92ad5e",
            "private_ip": "172.168.12.92",
            "public_ip": "54.169.68.41",
            "subnet_id": "subnet-097d28122a407ab4f",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-ap-southeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-vpc-ap-southeast-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aae6f1e5b1a48e13",
            "connectivity_type": "public",
            "id": "nat-0e4656bf16362ff15",
            "network_interface_id": "eni-01dd17b5d96426f58",
            "private_ip": "172.168.17.224",
            "public_ip": "18.138.7.66",
            "subnet_id": "subnet-0947609cd757f4bb7",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-ap-southeast-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-vpc-ap-southeast-1b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e810c3db35edf36",
            "connectivity_type": "public",
            "id": "nat-09f105dcedc7fe904",
            "network_interface_id": "eni-087ebf3ceff86f9f2",
            "private_ip": "172.168.22.236",
            "public_ip": "175.41.130.121",
            "subnet_id": "subnet-0da9f7cdb6d209dc2",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-ap-southeast-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-vpc-ap-southeast-1c",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0baaa4d85fee3bbf81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b88e0128358d236e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0baaa4d85fee3bbf8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-054b3ae619cea71ff1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e4656bf16362ff15",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-054b3ae619cea71ff",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_eip.nat"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c059c17ecba209471080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09f105dcedc7fe904",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c059c17ecba20947",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_eip.nat"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cd43e73142a73b50",
            "id": "r-rtb-0f625ee9517309bf11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f625ee9517309bf1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:945251900491:route-table/rtb-0baaa4d85fee3bbf8",
            "id": "rtb-0baaa4d85fee3bbf8",
            "owner_id": "945251900491",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b88e0128358d236e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-private-ap-southeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-vpc-private-ap-southeast-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-000ba1ce5953f5ee0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:945251900491:route-table/rtb-054b3ae619cea71ff",
            "id": "rtb-054b3ae619cea71ff",
            "owner_id": "945251900491",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e4656bf16362ff15",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-private-ap-southeast-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-vpc-private-ap-southeast-1b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-000ba1ce5953f5ee0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:945251900491:route-table/rtb-0c059c17ecba20947",
            "id": "rtb-0c059c17ecba20947",
            "owner_id": "945251900491",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09f105dcedc7fe904",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-private-ap-southeast-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-vpc-private-ap-southeast-1c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-000ba1ce5953f5ee0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:945251900491:route-table/rtb-0f625ee9517309bf1",
            "id": "rtb-0f625ee9517309bf1",
            "owner_id": "945251900491",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cd43e73142a73b50",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-000ba1ce5953f5ee0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059ccf274e2631670",
            "route_table_id": "rtb-0baaa4d85fee3bbf8",
            "subnet_id": "subnet-062ae3776d28c51e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01059a47d2bd265d8",
            "route_table_id": "rtb-054b3ae619cea71ff",
            "subnet_id": "subnet-07ff5e6492b89a5f8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8aae8ef70183114",
            "route_table_id": "rtb-0c059c17ecba20947",
            "subnet_id": "subnet-0722648295708e4b3"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1b0369cad18b515",
            "route_table_id": "rtb-0f625ee9517309bf1",
            "subnet_id": "subnet-097d28122a407ab4f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6c670004b024a7f",
            "route_table_id": "rtb-0f625ee9517309bf1",
            "subnet_id": "subnet-0947609cd757f4bb7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ce988f46b087bf4",
            "route_table_id": "rtb-0f625ee9517309bf1",
            "subnet_id": "subnet-0da9f7cdb6d209dc2"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:945251900491:subnet/subnet-062ae3776d28c51e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.168.0.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062ae3776d28c51e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "945251900491",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-private-ap-southeast-1a",
              "Terraform": "true",
              "Tier": "2",
              "subnet": "private"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-vpc-private-ap-southeast-1a",
              "Terraform": "true",
              "Tier": "2",
              "subnet": "private"
            },
            "vpc_id": "vpc-000ba1ce5953f5ee0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:945251900491:subnet/subnet-07ff5e6492b89a5f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.168.4.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ff5e6492b89a5f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "945251900491",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-private-ap-southeast-1b",
              "Terraform": "true",
              "Tier": "2",
              "subnet": "private"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-vpc-private-ap-southeast-1b",
              "Terraform": "true",
              "Tier": "2",
              "subnet": "private"
            },
            "vpc_id": "vpc-000ba1ce5953f5ee0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:945251900491:subnet/subnet-0722648295708e4b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "172.168.8.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0722648295708e4b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "945251900491",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-private-ap-southeast-1c",
              "Terraform": "true",
              "Tier": "2",
              "subnet": "private"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-vpc-private-ap-southeast-1c",
              "Terraform": "true",
              "Tier": "2",
              "subnet": "private"
            },
            "vpc_id": "vpc-000ba1ce5953f5ee0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:945251900491:subnet/subnet-097d28122a407ab4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.168.12.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097d28122a407ab4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "945251900491",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-public-ap-southeast-1a",
              "Terraform": "true",
              "Tier": "1",
              "subnet": "private"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-vpc-public-ap-southeast-1a",
              "Terraform": "true",
              "Tier": "1",
              "subnet": "private"
            },
            "vpc_id": "vpc-000ba1ce5953f5ee0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:945251900491:subnet/subnet-0947609cd757f4bb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.168.16.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0947609cd757f4bb7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "945251900491",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-public-ap-southeast-1b",
              "Terraform": "true",
              "Tier": "1",
              "subnet": "private"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-vpc-public-ap-southeast-1b",
              "Terraform": "true",
              "Tier": "1",
              "subnet": "private"
            },
            "vpc_id": "vpc-000ba1ce5953f5ee0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:945251900491:subnet/subnet-0da9f7cdb6d209dc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "172.168.20.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da9f7cdb6d209dc2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "945251900491",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-public-ap-southeast-1c",
              "Terraform": "true",
              "Tier": "1",
              "subnet": "private"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-vpc-public-ap-southeast-1c",
              "Terraform": "true",
              "Tier": "1",
              "subnet": "private"
            },
            "vpc_id": "vpc-000ba1ce5953f5ee0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:945251900491:vpc/vpc-000ba1ce5953f5ee0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.168.0.0/19",
            "default_network_acl_id": "acl-0f2c0f97f1d2bb046",
            "default_route_table_id": "rtb-08c69d9f7d790221b",
            "default_security_group_id": "sg-02e762c88edf63943",
            "dhcp_options_id": "dopt-7878521f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-000ba1ce5953f5ee0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08c69d9f7d790221b",
            "owner_id": "945251900491",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}